# Cone_classification

./: README.md  dataset.yaml  pyproject.toml
coneset/: augment.py  cli.py  config.py  convert.py  merge.py  paths.py  prepare.py  select.py  stats.py  yolo_eval.py  yolo_predict.py  yolo_train.py
config/: config.yaml
